# rpg-agent-behind-chat-completion

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  configs.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: ai-index.md  all-about-auth.md  all-about-sessions.md  configurations.md  deployment-huggingface.md  deployment-railway.md  hosting_alternatives_research.md  road-to-multi-tenant.md  specifications.md  super-readme.md  why-rachel.md  why-rpg-agent.md
docs/deprecated/: deployment-huggingface.md  deployment-railway.md
launchers/linux/: launch.sh  rachel-proxy.desktop
launchers/macos/: launch.command
launchers/windows/: launch.bat
scripts/: build_standalone.py
src/rachel/: __init__.py  auth.py  config.py  proxy.py
src/rachel/agent/: graph.py  nodes.py  openrouter.py  prompt_constants.py  prompts.py  tools.py
src/rachel/core/: crypto.py  db.py  settings_storage.py  state.py
src/rachel/routes/: __init__.py  completions.py  sessions.py  system.py
src/rachel/sandbox/: base.py  python_engine.py  sandbox.py  v8_engine.py
src/rachel/static/: app.js  style.css
src/rachel/templates/: index.html
src/rpg_agent/: __init__.py  auth.py  config.py  graph.py  index.html  openrouter.py  prompts.py  proxy.py  sandbox.py  schemas.py  session.py  state.py  tools.py
src/rpg_agent/agent/: graph.py  nodes.py  openrouter.py  prompt_constants.py  prompts.py  reasoning_formats.py  tools.py
src/rpg_agent/core/: session.py  state.py
src/rpg_agent/routes/: completions.py  sessions.py  system.py
src/rpg_agent/sandbox/: python_engine.py  sandbox.py  schemas.py  v8_engine.py  validation.py
src/rpg_agent/templates/: index.html
tests/: test_agent_flow.py  test_crypto_envelope.py  test_multi_provider.py  test_postgres_storage.py  test_prompts.py  test_proxy.py  test_proxy_keys_and_auth.py  test_reasoning_formats.py  test_relational_storage.py  test_settings_storage.py  test_state_and_sandbox.py  test_state_expansion.py  test_state_guardrails.py
