[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpg-agent-behind-chat-completion"
version = "0.1.0"
description = "RPG Agent Behind Chat Completion"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "neolaw" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rpg_agent"]
