[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpg-agent-behind-chat-completion"
version = "0.1.0"
description = "RPG Agent Behind Chat Completion"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "neolaw" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110.0,<0.116.0",
    "uvicorn[standard]>=0.29.0,<0.35.0",
    "httpx>=0.27.0,<0.33.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "langgraph>=1.2.0,<2.0.0",
    "langchain-openai>=1.3.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
    "py-mini-racer>=0.6.0,<0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
]

[project.scripts]
rpg-agent-proxy = "rpg_agent.proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rpg_agent"]

[tool.pyright]
venvPath = "."
venv = "venv"
extraPaths = ["src"]

[tool.pyrefly]
search-path = ["src"]
infer-with-first-use = false

