[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rachel-proxy"
version = "0.1.0a0"
description = "RACHEL (Rpg Agent CHat Evaluation Loop) - OpenAI-compatible Chat Completion API proxy with stateful LangGraph agent and V8 code sandbox"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "neolaw" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110.0,<0.116.0",
    "uvicorn[standard]>=0.29.0,<0.35.0",
    "httpx>=0.27.0,<0.33.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "langgraph>=1.2.0,<2.0.0",
    "langchain-openai>=1.3.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
    "py-mini-racer>=0.6.0,<0.12.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "cryptography>=42.0.0",
    "pyjwt[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
]

[project.scripts]
rachel-proxy = "rachel.proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rachel"]

[tool.pyright]
venvPath = "."
venv = "venv"
extraPaths = ["src"]

[tool.pyrefly]
search-path = ["src"]
infer-with-first-use = false

